<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/images7"
    android:padding="15dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/images8"
        android:layout_weight="50"/>

    <EditText
        android:id="@+id/edituser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:layout_weight="9"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"

        />

    <EditText
        android:id="@+id/edittPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_weight="9"
        android:hint="@string/password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        />

    <Button
        android:id="@+id/ingresar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"

        android:layout_marginBottom="5dp"
        android:layout_weight="10"
        android:onClick="ingresar"
        android:text="@string/ingrsar"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="20">


    </LinearLayout>

    <TextView
        android:id="@+id/obtener"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obtener_contraseña"
        android:gravity="center"/>
</LinearLayout>